# studio-assist

./: .gitignore  README.md  index.html  package.json  tailwind.config.cjs  vite.config.js
.github/workflows/: main.yml
src/: App.vue  main.css  main.js  struct.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Alert.vue  AppLoading.vue  Menu.vue  Metronome.vue  Modal.vue  Notifications.vue  Shortcut.vue  TapTempo.vue  Waveform.vue
src/components/configs/: KeyDetection.vue  Preferences.vue
src/components/piano/: Key.vue  Octaves.vue
src/icons/: Arrow.vue  ArrowsUpDown.vue  Calculator.vue  CheckCircle.vue  Chevron.vue  Clock.vue  Close.vue  Cog.vue  Computer.vue  CursorArrays.vue  Document.vue  DocumentAdd.vue  Dots.vue  Download.vue  Edit.vue  Exclamation.vue  File.vue  FingerPrint.vue  Info.vue  Keyboard.vue  Loading.vue  Logo.vue  LogoWhite.vue  Metronome.vue  Minus.vue  Pause.vue  Play.vue  PlayCircle.vue  PlayPause.vue  Plus.vue  Refresh.vue  Scale.vue  Speaker.vue  SpeakerMute.vue  Stop.vue  Trash.vue  XCircle.vue
src/locale/: en.json  es.json  fr.json
src/sections/: Configs.vue  Files.vue  Milliseconds.vue  Reference.vue  Scales.vue
src/stores/: index.js
src/utils/: buffer.js  convert.js  data.js  encoding.js  files.js  init.js  keys.js  locale.js  log.js  octaves.js  os.js  worker.js
src/workers/: detection-worker.js
tasks/: cli.js  version.js
tasks/files/: update.js
