[package]
name = "studio-assist"
version = "4.0.0"
description = "Studio Assist by Music By Darcy."
authors = ["Darcy Voutt"]
license = ""
repository = "https://github.com/darcyvoutt/studio-assist-releases"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
base64 = "0.21.0"
log = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.3.0", features = [ "dialog-message", "protocol-asset", "fs-exists", "clipboard-write-text", "dialog-confirm", "fs-create-dir", "fs-read-file", "fs-write-file", "os-all", "process-relaunch", "shell-open", "window-center", "window-maximize", "window-start-dragging", "window-unmaximize"] }
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
